# Q-SEED

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  dbt_project.yml  docker-compose.yml  profiles.yml  profiles.yml.example  pyproject.toml
.github/workflows/: lint.yml
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: metrics_calc.sql
dbt/models/: count_by_markets.sql  data_quality.sql  data_quality_stats.sql  exposures.yml  fct_price_factors.sql  int_daily_returns.sql  per_ticker_counts.sql  rpt_ticker_details.sql  schema.yml  sources.yml  stg_raw_stocks.sql  summary.sql
docs/: README.md  architecture.md  backtesting.md  cli-reference.md  data-pipeline.md  factor-analysis.md  getting-started.md  portfolio-optimization.md  security-metadata-contract.md
docs/case-studies/: 2026-07-kr-backtest.md  2026-07-kr-factor-ic.md  2026-07-kr-optimize.md
research/: db_test.py  exploration.ipynb  main.py  research.html
src/analysis/: __init__.py  ic.py  quintile.py  runner.py
src/backtest/: __init__.py  engine.py  export.py  metrics.py  portfolio.py  runner.py  strategy.py
src/factors/: __init__.py  base.py  price_factors.py  registry.py
src/fetchers/: __init__.py  market_series.py  security_metadata.py  yfinance.py
src/metadata/: __init__.py  enrichment.py  sector_map.py
src/optimize/: __init__.py  covariance.py  methods.py  optimizer.py  (+1 more)
tests/: test_core_correctness.py  test_market_indicators.py  test_refactor_helpers.py  test_security_enrichment.py  test_security_metadata.py
(+75 files in other folders)
