[project]
name = "q-seed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "delta-spark>=4.0.1",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "pyspark>=4.1.1",
    "requests>=2.32.5",
    "scipy>=1.17.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "PL"]
ignore = ["D100", "D104"] # 필요에 따라 무시할 규칙 추가

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
